Lib i18n must not allow foreign application #10417